# sparse-linear

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  README.md  TODO.org  cabal.project  default.nix  feast.cabal  global-lock.nix  shell.nix  sparse-linear.cabal  suitesparse.cabal
.github/workflows/: git.yml  linear-history.yml  test.yml  tests.yml
Numeric/LinearAlgebra/: Sparse.hs
cbits/: cs_add_ptrs.c  cs_diag.c  cs_feast.c  cs_kron.c  feast_cs.c  mk_cs_ci.c  umfpack_cs.c  umfpack_cs.h  zkron.c
feast/: default.nix  feast.cabal  shell.nix
feast/src/Numeric/LinearAlgebra/: Feast.hs
feast/src/Numeric/LinearAlgebra/Feast/: Internal.hs
feast/tests/: test-feast.hs
sparse-linear/: README.md  default.nix  shell-profiling.nix  shell.nix  sparse-linear.cabal  sparse-linear.nix  vector-0.10.12.3.nix
sparse-linear/src/Data/Complex/: Enhanced.hs
sparse-linear/src/Data/Matrix/: Sparse.hs
sparse-linear/src/Data/Matrix/Sparse/: Foreign.hs  Lin.hs  Mul.hs  ScatterGather.hs  Slice.hs
sparse-linear/src/Data/Vector/: Sparse.hs  Sparse.hs-boot  Util.hs
sparse-linear/src/Data/Vector/Sparse/: ScatterGather.hs
sparse-linear/tests/: Sparse.hs
sparse-linear/tests/Test/: LinearAlgebra.hs
src/Control/Loop/: For.hs
src/Data/: Cs.hsc  Matrix.hs  Pairs.hs  Triples.hs
src/Data/Complex/: Enhanced.hs
src/Data/Matrix/: Sparse.hs  Sparse.hsc
src/Data/Matrix/Sparse/: Compress.hs  Foreign.hs  Lin.hs  Mul.hs  ScatterGather.hs  Slice.hs  Type.hs
src/Data/Proxy/: PolyKind.hs
src/Data/Vector/: Mutability.hs  Sparse.hs  Util.hs
src/Data/Vector/Algorithms/Search/: Immutable.hs
src/Numeric/LinearAlgebra/: Feast.hs  Sparse.hs  Umfpack.hs
src/Numeric/LinearAlgebra/Matrix/: Sparse.hs
src/Numeric/LinearAlgebra/Matrix/Sparse/: Internal.hsc
src/Numeric/LinearAlgebra/Sparse/: Internal.hs
src/Numeric/LinearAlgebra/Umfpack/: Internal.hs
suitesparse/: default.nix  shell.nix  suitesparse.cabal
suitesparse/src/Numeric/LinearAlgebra/: Umfpack.hs
suitesparse/src/Numeric/LinearAlgebra/Umfpack/: Internal.hs
suitesparse/tests/Test/: LinearAlgebra.hs
tests/: Feast.hs  Sparse.hs  Umfpack.hs  test-add.hs  test-dedup.hs  test-dims.hs  test-eq.hs  test-feast.hs  test-fmt.hs  test-invariant.hs  test-lens.hs  test-monoid.hs  test-mul.hs  test-mulv.hs  test-props.hs  test-umfpack.hs
tests/Data/: MorallyEq.hs
tests/Numeric/LinearAlgebra/Sparse/: QuickCheck.hs  Test.hs
tests/Test/: LinearAlgebra.hs
tests/Test/QuickCheck/Arbitrary/: LinearAlgebra.hs
