name:                suitesparse
version:             0.1.0.0
synopsis:
  Haskell bindings to the SuiteSparse library of sparse linear algebra routines
license:             GPL-2
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2014 Thomas Tuegel
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Numeric.LinearAlgebra.Sparse
    Numeric.LinearAlgebra.Sparse.Internal
    Numeric.LinearAlgebra.Matrix.Sparse.Internal
    Numeric.LinearAlgebra.Umfpack
    Numeric.LinearAlgebra.Umfpack.Internal
  build-depends:
      base >=4.7 && <4.8
    , storable-complex >=0.2 && <1
    , vector >=0.10 && <1
  hs-source-dirs: src
  default-language: Haskell2010
  extra-libraries:
    cxsparse
    feast
    umfpack
  ghc-options: -Wall
  include-dirs:
    cbits
  c-sources:
    cbits/feast_cs.c
    cbits/cs_add_ptrs.c
    cbits/cs_kron.c
    cbits/cs_diag.c
    cbits/umfpack_cs.c
  cc-options: -O3

test-suite sparse
  type: exitcode-stdio-1.0
  main-is: Sparse.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base
    , hspec >=2.1 && <3
    , QuickCheck >=2.7 && <3
    , suitesparse
    , vector >=0.10 && <1
