name:                suitesparse
version:             0.1.0.0
synopsis:
  Haskell bindings to the SuiteSparse library of sparse linear algebra routines
license:             GPL-2
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2014 Thomas Tuegel
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Complex.Enhanced
    Data.Cs
    Data.Matrix
    Data.Matrix.Sparse
    Data.Matrix.Sparse.Compress
    Data.Matrix.Sparse.Foreign
    Data.Matrix.Sparse.Type
    Data.Vector.Sparse
    Data.Vector.Util
    Numeric.LinearAlgebra.Feast
    Numeric.LinearAlgebra.Sparse
    Numeric.LinearAlgebra.Umfpack
    Numeric.LinearAlgebra.Umfpack.Internal
  build-depends:
      base >=4.7 && <4.8
    , global-lock >=0.1 && <1
    , mono-traversable >=0.6 && <1
    , primitive >=0.5 && <1
    , storable-complex >=0.2 && <1
    , vector >=0.10 && <1
    , vector-algorithms >=0.6 && <1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  include-dirs:
    cbits
  extra-libraries:
    -- The order of these libraries ABSOLUTELY MUST NOT EVER BE CHANGED!
    feast
    lapack
    cxsparse
    umfpack
    ptcblas
    ptf77blas
    gfortran
    atlas
    suitesparseconfig
    cholmod
    colamd
    amd
  c-sources:
    cbits/cs_add_ptrs.c
    cbits/cs_kron.c
    cbits/cs_diag.c
    cbits/umfpack_cs.c
  cc-options: -O3

test-suite sparse
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Sparse.hs
  other-modules:
    Test.LinearAlgebra
  default-language: Haskell2010
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends:
      base
    , hspec >=2.1 && <3
    , QuickCheck >=2.7 && <3
    , mono-traversable >=0.6 && <1
    , suitesparse
    , vector >=0.10 && <1

test-suite umfpack
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Umfpack.hs
  other-modules:
    Test.LinearAlgebra
  default-language: Haskell2010
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends:
      base
    , hspec >=2.1 && <3
    , QuickCheck >=2.7 && <3
    , suitesparse
    , vector >=0.10 && <1

test-suite feast
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Feast.hs
  default-language: Haskell2010
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends:
      base
    , hspec >=2.1 && <3
    , QuickCheck >=2.7 && <3
    , suitesparse
    , vector >=0.10 && <1
