name: sparse-linear
version: 0.1.0.0
synopsis: Sparse linear algebra primitives in Haskell
license: BSD3
license-file: LICENSE
author: Thomas Tuegel
maintainer: ttuegel@gmail.com
copyright: (c) 2014-2021 Thomas Tuegel
category: Math
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    Data.Complex.Enhanced
    Data.Matrix.Sparse
    Data.Matrix.Sparse.Foreign
    Data.Vector.Sparse
    Data.Vector.Sparse.ScatterGather
    Data.Vector.Util
  build-depends:
      base >=4.11
    , binary >=0.7
    , hmatrix >=0.16 && <1
    , mono-traversable >=0.6 && <2
    , primitive >=0.5 && <1
    , tagged >=0.7 && <1
    , transformers >=0.4
    , vector >=0.11 && <1
    , vector-algorithms >=0.6 && <1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -msse2
  ghc-prof-options: -fprof-auto

test-suite sparse
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Sparse.hs
  other-modules:
    Test.LinearAlgebra
  default-language: Haskell2010
  ghc-options: -Wall -msse2
  ghc-prof-options: -fprof-auto
  build-depends:
      base
    , hspec >=2.1 && <3
    , QuickCheck >=2.7 && <3
    , mono-traversable >=0.6 && <2
    , sparse-linear
    , vector >=0.10 && <1
